--- a/index.html
+++ b/index.html
@@ -75,10 +75,32 @@
             
         </section>
 
-    </main>
+        <section class="intro">
+            <div class="intro-inner">
+                <img src="images/illustration_itineraires.jpg" alt="Photographie de plusieurs cyclistes pédalant dans la campagne">
+                <a href="itineraires.html">Guide des itinéraires</a>
+            </div>    
+        </section>
+     </main>
    
-    <footer>
+    <footer class="footer-index">
+        <div class="footer-inner">
+            <div class="footer-links">
+            <h3>Plan du site</h3>
+            <ul>
+                <li> <a href="index.html">Accueil</a></li>
+                <li> <a href="velos.html">Guide des Vélos</a></li>
+                <li> <a href="itineraires.html">Guide des itinéraires</a></li>
+            </ul></div>
 
+            <div class="footer-about">
+            <p> Ce site web est réalisé dans le cadre de la formation IMAC de l'ESIEE. Il est à but déucatif uniquement.</p> </div>
+        
+            <div class="footer-logo">
+            <img src="images/logo.svg" alt="Logo BikepackIMAC"></div>
+         </div>
+
+         <p class="footer-credit"> BikepackIMAC 2025</p>
     </footer>
 
 </body>
