-> Page d'accueil fini -> Version mobile fini -> Footer fini

--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
             </ul></div>
 
             <div class="footer-about">
-            <p> Ce site web est réalisé dans le cadre de la formation IMAC de l'ESIEE. Il est à but déucatif uniquement.</p> </div>
+            <p> Ce site web est réalisé dans le cadre de <a href ="https://www.esiee.fr/formations/ingenieur/filieres/imac">la formation IMAC de l'ESIEE.</a> Il est à but éducatif uniquement.</p> </div>
         
             <div class="footer-logo">
             <img src="images/logo.svg" alt="Logo BikepackIMAC"></div>
          </div>
-
-         <p class="footer-credit"> BikepackIMAC 2025</p>
+          <p class="footer-credit"> BikepackIMAC 2025</p>
     </footer>
+
 
 </body>
 </html>
