--- a/itineraires.html
+++ b/itineraires.html
@@ -6,36 +6,6 @@
 <title>BikepackIMAC - Guide des itinéraires</title>
 <link rel="stylesheet" href="css/style.css">
 
-<!-----------------------------------------------------------------------
-    Mes commentaires :                  
-    ---------------------------------------------------------------------
-    NE PAS OUBLIER LES BALISES ALT, merci moi même.
-    Boilerplate (le haut du code html)
-    Mobile First -> meilleur option quand on veux du responsive.
-    "hero" est un therme universel pour la partie en haut d'une page qui présente la page (y'a souvent un h1, image, bouto, etc...)
-    Les éléments de liens et texte, images et médias, les formulaires sont des inline par défaults et donc il ne peuvent PAS être centrée avec margin:auto. IL FAUT les passez en display block. 
-        -> INLINE = éléments qui vivent dans une phrase
-        <a>, <strong>, <span>, <img>, <input>, <label>
-        -> INLINE-BLOCK = dans une phrase mais stylable <button>, <input>, <textarea>, <select>, <video>
-        -> BLOCK = éléments qui structurent la page <div>, <section>, <p>, <header>, <nav>, <footer>
-    &quot plutôt que "
-    ----------------------------------------------------------------------
-    Raccourcis : 
-    ----------------------------------------------------------------------
-    Word Wrap : option+Z
-    Fermer page : cmd+w
-    Faire le boilerplate avec vscode : !+ tab
-    Vefier le display d'un élément : outil Inspecteur (F12) sur style. 
-    ----------------------------------------------------------------------
-    Sémentiques que j'oublie : 
-    ----------------------------------------------------------------------
-    <img src="liens" alt="description">
-    classe : <div class="nomdeclasse">
-    id unique : <div id="nomdeid">
-    Si la page html est dans le même dosser que exemple "images", pas besoin d'un "/" devant images : 
-        -> donc : images/... pas /images/...
-    ------------------------------------------------------------------------>
-
 </head>
 
 <body> 
@@ -56,7 +26,7 @@
             <div class="itineraires-inner">
                 <h1>NOS ITINÉRAIRES</h1>
                 <p>
-                Découvrer notre sélection d'itinéraires bikepacking en France, et partez à l'aventure !
+                Découvrez&nbsp;notre sélection d'itinéraires&nbsp;bikepacking en&nbsp;France,&nbsp;et partez à&nbsp;l'aventure&nbsp;!
                 </p>
             </div>
         </section>
@@ -65,30 +35,33 @@
         <article class="itineraires-article">
             <h2>Le canal du Midi</h2>
             <img src="images/canal-du-midi.jpg" alt="Photographie d'un pont sur le canal Midi">
-            <p>Un itinéraire accessible, principalement plat, idéal pour découvrir la région du Midi à vélo !</p>
+            <p>Un itinéraire accessible, principalement plat, idéal pour découvrir la&nbsp;région du&nbsp;Midi à&nbsp;vélo&nbsp;!</p>
             <ul>
-                <li>• Longueur : 197km</li>
-                <li>• Durée : 2 à 3 jours</li>
+                <li>• Longueur&nbsp;: 197&nbsp;km</li>
+                <li>• Durée&nbsp;: 2&nbsp;à&nbsp;3&nbsp;jours</li>
             </ul>
         </article>
 
         <article class="itineraires-article">
             <h2>Paris-Dieppe</h2>
             <img src="images/dieppe.jpg" alt="Photographie panoramique de la ville de Dieppe">
-            <p>Un itinéraire accessible, principalement plat, idél pour découvrir la région du Midi à vélo !</p>
+            <p>Un itinéraire accessible, principalement plat, idéal pour découvrir la&nbsp;région du&nbsp;Midi à&nbsp;vélo&nbsp;!</p>
             <ul>
-                <li>• Longueur : 394km <li>
-                <li>• Durée : 3 à 5 jours  </li>
+                <li>• Longueur&nbsp;: 394&nbsp;km</li>
+                <li>• Durée&nbsp;: 3&nbsp;à&nbsp;5&nbsp;jours</li>
+
             </ul> 
         </article>
 
         <article class="itineraires-article">
             <h2>La tour du Mont Blanc</h2>
              <img src="images/mont_blanc.jpg" alt="Photographie du Mont Blanc">
-             <p>Un voyage en haute montagne au coeur des Alpes françaises et italiennes, pour les plus téméraires !</p>
+             <p>Un voyage en&nbsp;haute montagne au&nbsp;coeur des&nbsp;Alpes françaises et&nbsp;italiennes,&nbsp;pour les&nbsp;plus téméraires&nbsp;!</p>
+
             <ul>
-                <li>• Longueur : 350km <li>
-                <li>• Durée : 8 à 10 jours  </li>
+                <li>• Longueur&nbsp;: 350&nbsp;km</li>
+                <li>• Durée&nbsp;: 8&nbsp;à&nbsp;10&nbsp;jours</li>
+
             </ul> 
         </article>
     </section>   
@@ -106,7 +79,7 @@
             </ul></div>
 
             <div class="footer-about">
-            <p> Ce site web est réalisé dans le cadre de <a href ="https://www.esiee.fr/formations/ingenieur/filieres/imac">la formation IMAC de l'ESIEE.</a> Il est à but éducatif uniquement.</p> </div>
+            <p> Ce site web est réalisé dans le cadre de <a href ="https://www.esiee.fr/formations/ingenieur/filieres/imac">la formation IMAC de l'ESIEE.</a> Il est à but éducatif uniquement.</p></div>
         
             <div class="footer-logo">
             <img src="images/logo.svg" alt="Logo BikepackIMAC"></div>
