--- a/velos.html
+++ b/velos.html
@@ -5,37 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>BikepackIMAC - Guide des vélos</title>
 <link rel="stylesheet" href="css/style.css">
-
-<!-----------------------------------------------------------------------
-    Mes commentaires :                  
-    ---------------------------------------------------------------------
-    NE PAS OUBLIER LES BALISES ALT, merci moi même.
-    Boilerplate (le haut du code html)
-    Mobile First -> meilleur option quand on veux du responsive.
-    "hero" est un therme universel pour la partie en haut d'une page qui présente la page (y'a souvent un h1, image, bouto, etc...)
-    Les éléments de liens et texte, images et médias, les formulaires sont des inline par défaults et donc il ne peuvent PAS être centrée avec margin:auto. IL FAUT les passez en display block. 
-        -> INLINE = éléments qui vivent dans une phrase
-        <a>, <strong>, <span>, <img>, <input>, <label>
-        -> INLINE-BLOCK = dans une phrase mais stylable <button>, <input>, <textarea>, <select>, <video>
-        -> BLOCK = éléments qui structurent la page <div>, <section>, <p>, <header>, <nav>, <footer>
-    &quot plutôt que "
-    ----------------------------------------------------------------------
-    Raccourcis : 
-    ----------------------------------------------------------------------
-    Word Wrap : option+Z
-    Fermer page : cmd+w
-    Faire le boilerplate avec vscode : !+ tab
-    Vefier le display d'un élément : outil Inspecteur (F12) sur style. 
-    ----------------------------------------------------------------------
-    Sémentiques que j'oublie : 
-    ----------------------------------------------------------------------
-    <img src="liens" alt="description">
-    classe : <div class="nomdeclasse">
-    id unique : <div id="nomdeid">
-    Si la page html est dans le même dosser que exemple "images", pas besoin d'un "/" devant images : 
-        -> donc : images/... pas /images/...
-    ------------------------------------------------------------------------>
-
 </head>
 
 <body> 
@@ -57,46 +26,48 @@
                 <h1>NOS VÉLOS</h1>
                 <img src="images/3_bikes.webp" alt="Montage photo de trois vélos, n'en formant plus qu'un">
                 <p>
-                Vous n'avez pas encore de vélo adapté pour le bikepacking ?
-                Découvrez nos recommandations selon vos besoins.
+                Vous n'avez pas encore de&nbsp;vélo adapté pour le&nbsp;bikepacking&nbsp;? 
+                Découvrez nos recommandations selon vos&nbsp;besoins.
                 </p>
             </div>
         </section>
 
     <section class="velos-list">
         <article class="velos-article">
-            <h2>Pour la route : NexCycle Touring II</h2>
-             <p>Un cadre léger, des pneus fins et une position aérodynamique ... le Touring II de chez NexCycle est le choix idéal pour tracer votre chemin sur le bitume et l'asphalte. À un prix correct et une robustesse à toute épreuve, c'est le compagnon idéal si vous roulez principalement sur route.</p>
+            <h2>Pour la&nbsp;route&nbsp;: NexCycle Touring&nbsp;II</h2>
+             <p>Un cadre léger, des pneus fins et une position aérodynamique&nbsp;... le&nbsp;Touring&nbsp;II de&nbsp;chez NexCycle est le&nbsp;choix idéal pour tracer votre chemin sur le&nbsp;bitume et&nbsp;l'asphalte. À&nbsp;un prix correct et&nbsp;une robustesse à&nbsp;toute épreuve, c'est le&nbsp;compagnon idéal si vous roulez principalement sur&nbsp;route.
+</p>
             <img src="images/nexCycle_touringII.webp" alt="Photographie du NexCycle Touring II devant la mer">
             <ul>
-                <li>• Marque : NexCycle</li>
-                <li>• Modèle : Touring II</li>
-                <li>• Taille des roues : 700×28</li>
-                <li>• Prix : 969€</li>
+                <li>• Marque&nbsp;: NexCycle</li>
+                <li>• Modèle&nbsp;: Touring&nbsp;II</li>
+                <li>• Taille des&nbsp;roues&nbsp;: 700×28</li>
+                <li>• Prix&nbsp;: 969&nbsp;€
             </ul>
         </article>
 
         <article class="velos-article">
-            <h2>Pour le gravel : Panebicci Sottobosco</h2>
-            <p>Dernier modèle de la marque italienne Penibicci, le Sottobosco est un vélo gravel de très bonne facture, à l'aise aussi bien sur route que dans les chemins plus techniques. Un vélo idéal pour celles et ceux qui veulent explorer sans limite, mais sans sacrifier le confort et la performance !</p>
+            <h2>Pour le&nbsp;gravel&nbsp;: Panebicci Sottobosco</h2>
+            <p>Dernier modèle de&nbsp;la marque italienne Penibicci, le&nbsp;Sottobosco est un vélo&nbsp;gravel de&nbsp;très bonne facture, à&nbsp;l'aise aussi bien sur&nbsp;route que dans les&nbsp;chemins plus techniques. Un vélo idéal pour celles et&nbsp;ceux qui veulent explorer sans&nbsp;limite, mais sans sacrifier le&nbsp;confort et&nbsp;la performance&nbsp;!</p>
             <img src="images/Panebicci_Sottobosco.webp" alt="Photographie du Panabicci Sattobosco devant un muret de graphitis">
             <ul>
-                <li>• Marque : Panebicci</li>
-                <li>• Modèle : Sottobosco</li>
-                <li>• Taille des roues : 700×28</li>
-                <li>• Prix : 1048€</li>
-                </ul> 
+                <li>• Marque&nbsp;: Panebicci</li>
+                <li>• Modèle&nbsp;: Sottobosco</li>
+                <li>• Taille des&nbsp;roues&nbsp;: 700×28</li>
+                <li>• Prix&nbsp;: 1048&nbsp;€</li>
+
+            </ul> 
         </article>
 
         <article class="velos-article">
-            <h2>Pour le off-road : Rollick Bikes Moonwalker</h2>
-             <p>Le Moonwalker de chez Rollick Bikes est idéniablement l'un des meilleurs vélo off-road disponible à moins de 1500€ aujourd'hui. Entièrement suspensu, équipé de pneus de 56mm de large, il saura vous emmener partout, même dans les endroits les plus inattendus !</p>
+            <h2>Pour le&nbsp;off-road&nbsp;: Rollick Bikes&nbsp;Moonwalker</h2>
+             <p>Le&nbsp;Moonwalker de&nbsp;chez Rollick&nbsp;Bikes est indéniablement l'un des&nbsp;meilleurs vélo&nbsp;off-road disponible à&nbsp;moins de&nbsp;1500&nbsp;€ aujourd'hui. Entièrement suspendu, équipé de&nbsp;pneus de&nbsp;56&nbsp;mm de&nbsp;large, il saura vous emmener partout, même dans les&nbsp;endroits les&nbsp;plus inattendus&nbsp;!</p>
             <img src="images/RollickBikes_moonwalker.webp" alt="Photographie du Rollick Bikes Moonwalker devant de la roche rouge">
             <ul>
-                <li>• Marque : Rollick Bikes</li>
-                <li>• Modèle : Moonwalker</li>
-                <li>• Taille des roues : 29&quot×58mm</li>
-                <li>• Prix : 1098€</li>
+                <li>• Marque&nbsp;: Rollick&nbsp;Bikes</li>
+                <li>• Modèle&nbsp;: Moonwalker</li>
+                <li>• Taille des&nbsp;roues&nbsp;: 29&quot;×58&nbsp;mm</li>
+                <li>• Prix&nbsp;: 1098&nbsp;€</li>
             </ul> 
         </article>
     </section>   
@@ -114,7 +85,7 @@
             </ul></div>
 
             <div class="footer-about">
-            <p> Ce site web est réalisé dans le cadre de <a href ="https://www.esiee.fr/formations/ingenieur/filieres/imac">la formation IMAC de l'ESIEE.</a> Il est à but éducatif uniquement.</p> </div>
+            <p> Ce site web est réalisé dans le cadre de <a href ="https://www.esiee.fr/formations/ingenieur/filieres/imac">la formation IMAC del'ESIEE.</a> Il est à but éducatif uniquement.</p> </div>
         
             <div class="footer-logo">
             <img src="images/logo.svg" alt="Logo BikepackIMAC"></div>
