--- a/velos.html
+++ b/velos.html
@@ -27,7 +27,7 @@
                 <img src="images/3_bikes.webp" alt="Montage photo de trois vélos, n'en formant plus qu'un">
                 <p>
                 Vous n'avez pas encore de&nbsp;vélo adapté pour le&nbsp;bikepacking&nbsp;? 
-                Découvrez nos recommandations selon vos&nbsp;besoins.
+                Découvrez ici les modèles que nous recommandons le plus pour chaque usage&nbsp;(route,&nbsp;gravel,&nbsp;off-road).&nbsp;
                 </p>
             </div>
         </section>
